[test] Add CircleCI