@@ -255,6 +255,7 @@
                     <version>3.12.0</version>
                     <configuration>
                         <source>${maven.compiler.source}</source>
+                        <additionalOptions>--enable-preview</additionalOptions>
                         <archive>
                             <manifest>
                                 <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
@@ -352,6 +353,14 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-surefire-report-plugin</artifactId>
                     <version>3.5.6</version>
+                </plugin>
+                <plugin>
+                    <groupId>com.github.hazendaz.maven</groupId>
+                    <artifactId>coveralls-maven-plugin</artifactId>
+                    <version>5.1.0</version>
+                    <configuration>
+                        <repoToken>${env.COVERALLS_TOKEN}</repoToken>
+                    </configuration>
                 </plugin>
             </plugins>
         </pluginManagement>
